--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Metrics Converter</string>
+    <string name="title_fahrenheit">Fahrenheit</string>
+    <string name="title_celsius">Celsius</string>
+    <string name="button_swap">Swap</string>
 </resources>
